presentationwidget: Invalidate pixmaps on dpr change

Since the last rendered pixmap is usually reused, its device pixel ratio
can end up different from the `devicePixelRatioF()` of the widget which
is used for most size calculations which leads to an area that might be
unpainted causing visual artifacts.

BUG: 479141